Fixing a layout issue in firefox.

--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,16 @@ body
 
 .left{
 	float: left;
+	clear: left;
 }
 
 .right{
 	float: right;
+	clear: right;
+}
+
+.clear {
+	clear: both;
 }
 
 #table .fixed {
